Added Navigation Bar

--- a/WBooks/Supporting Files/en.lproj/Localizable.strings
+++ b/WBooks/Supporting Files/en.lproj/Localizable.strings
@@ -10,3 +10,10 @@
 "usernamePlaceholder" = "Username";
 "passwordPlaceholder" = "Password";
 "signInTitle" = "Sign In";
+
+//MARK: Navigation bar
+"libraryTitleNavBar" = "Library";
+"bookDetailTitleNavBar" = "Book detail";
+"wishlistTitleNavBar" = "Wishlist";
+"suggestTitleNavBar" = "Suggest";
+"rentalsTitleNavBar" = "Rentals";
