--- a/WBooks/Supporting Files/es-419.lproj/Localizable.strings
+++ b/WBooks/Supporting Files/es-419.lproj/Localizable.strings
@@ -10,3 +10,10 @@
 "usernamePlaceholder" = "Usuario";
 "passwordPlaceholder" = "Contraseña";
 "signInTitle" = "Ingresar";
+
+//MARK: Navigation bar
+"libraryTitleNavBar" = "Librería";
+"bookDetailTitleNavBar" = "Detalle del libro";
+"wishlistTitleNavBar" = "Lista deseada";
+"suggestTitleNavBar" = "Sugerencias";
+"rentalsTitleNavBar" = "Alquileres";
