--- a/WBooks/Supporting Files/en.lproj/Localizable.strings
+++ b/WBooks/Supporting Files/en.lproj/Localizable.strings
@@ -37,3 +37,15 @@
 "rentButton" = "RENT";
 "available" = "Available";
 "unavailable" = "Not available";
+
+// MARK: Book Suggest
+"submitButton" = "SUBMIT";
+"bookNamePlaceholder" = "Book´s name";
+"authorPlaceholder" = "Author";
+"yearPlaceholder" = "Year";
+"topicPlaceholder" = "Topic";
+"descriptionPlaceholder" = "Description";
+"chooseOptionAlertMessage" = "Please choose an option";
+"galleryAlertAction" = "Galley";
+"cameraAlertAction" = "Camera";
+"cancelAlertAction" = "Cancel";
