Adjusted messages for alert

--- a/WBooks/Supporting Files/en.lproj/Localizable.strings
+++ b/WBooks/Supporting Files/en.lproj/Localizable.strings
@@ -49,3 +49,5 @@
 "galleryAlertAction" = "Galley";
 "cameraAlertAction" = "Camera";
 "cancelAlertAction" = "Cancel";
+"okAlertAction" = "Ok";
+"titleAddBookAlertMessage" = "Book was successfully added";
